Giving myself a bit more time to write these posts.

--- a/mailing-list.html
+++ b/mailing-list.html
@@ -11,7 +11,7 @@ layout: base
 <div id="mc_embed_signup">
 <form action="https://frontendian.us18.list-manage.com/subscribe/post?u=944a22fa33a7ff861810c3a3e&amp;id=bb8b6be60b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2 style="text-align:center">By subscribing, we'll send you one (1) email a week alerting you to new posts.</h2>
+	<h2 style="text-align:center">By subscribing, we'll send you one (1) email every other week alerting you to new posts.</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
